# Autoinput

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  autoinput.py  pyproject.toml
.github/workflows/: python-publish.yml
src/autoinput/: __init__.py  autoinput.py
src/autoinput.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
