[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autoinput"
authors = [
  { name="Semenii Maksym", email="maks20sem@gmail.com" },
]
description = "Easier input for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/makssem13/Autoinput"
Issues = "https://github.com/makssem13/Autoinput/issues"
